--- a/src/root/root.html
+++ b/src/root/root.html
@@ -33,7 +33,7 @@
             <ul class="children-nav__list {{#if isDirectory}}children-nav__list--visible{{/if}}">
                 {{#each children}}
                     <li class="children-nav__list__item">
-                        <a href="/{{this.path}}">/{{this.path}}</a>
+                        <a href="{{this.path}}">{{this.path}}</a>
                     </li>
                 {{/each}}
             </ul>
