--- a/src/root/root.html
+++ b/src/root/root.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>{{title}} | shub.club</title>
+    <style>
+        body {
+            opacity: 0;
+        }
+
+    </style>
     <link rel="stylesheet" href="/root/root.css">
     <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
