feat: update env variables for more customization

--- a/src/root/root.html
+++ b/src/root/root.html
@@ -19,7 +19,7 @@
             <a href="https://shub.club" class="logo">shub.club</a>
             <nav class="menu">
                 <ul class="menu__list">
-                    <li class="menu__list__item menu__list__item--bold"><a href="/">qtip</a></li>
+                    <li class="menu__list__item menu__list__item--bold"><a href="/">{{fileSystemName}}</a></li>
                     {{#each nav}}
                         <li class="menu__list__item"><a href="/{{this.path}}">{{this.label}}</a></li>
                     {{/each}}
