--- a/src/root/root.html
+++ b/src/root/root.html
@@ -7,8 +7,8 @@
         body {
             opacity: 0;
         }
-
     </style>
+    <meta name="viewport" content="width=device-width; user-scalable=yes">
     <link rel="stylesheet" href="/root/root.css">
     <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -21,7 +21,11 @@
                 <ul class="menu__list">
                     <li class="menu__list__item menu__list__item--bold"><a href="/">{{fileSystemName}}</a></li>
                     {{#each nav}}
-                        <li class="menu__list__item"><a href="/{{this.path}}">{{this.label}}</a></li>
+                            <li class="menu__list__item">
+                                {{#if this.path}}
+                                    <a href="/{{this.path}}">{{this.label}}</a>
+                                {{/if}}
+                            </li>
                     {{/each}}
                 </ul>
             </nav>
@@ -31,7 +35,7 @@
             {{#if isDirectory}}
                 <div class="children-nav__title">This folder has children:</div>
             {{else}}
-                <input id="show-children" type="checkbox" class="children-nav__input" />
+                <input tabindex="0" id="show-children" type="checkbox" class="children-nav__input" />
                 <label for="show-children" class="children-nav__title children-nav__title--navigator">
                     Show file children
                 </label>
