chore: update viewport tags

--- a/src/root/root.html
+++ b/src/root/root.html
@@ -8,7 +8,7 @@
             opacity: 0;
         }
     </style>
-    <meta name="viewport" content="width=device-width; user-scalable=yes">
+    <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0">
     <link rel="stylesheet" href="/root/root.css">
     <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
