--- a/src/root/root.html
+++ b/src/root/root.html
@@ -8,6 +8,9 @@
             opacity: 0;
         }
     </style>
+    {{#if config.favicon}}
+        <link rel="icon" href="{{config.favicon}}" />
+    {{/if}}
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0">
     <link rel="stylesheet" href="/root/root.css">
     <!--[if IE]>
