--- a/src/server/root/root.html
+++ b/src/server/root/root.html
@@ -14,11 +14,15 @@
     {{#if isPreview}}
     <script src="/root/preview.js" type="application/javascript"></script>
     {{/if}}
+
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0">
     <link rel="stylesheet" href="/root/root.css">
     <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    {{#if config.head}}
+        {{config.head}}
+    {{/if}}
 </head>
     <body>
         <header class="header">
@@ -83,5 +87,8 @@
         <main id="main-content">
             {{{content}}}
         </main>
+        {{#if config.endOfBody}}
+            {{config.endOfBody}}
+        {{/if}}
     </body>
 </html>
