--- a/src/server/root/root.html
+++ b/src/server/root/root.html
@@ -15,15 +15,12 @@
     <script src="/root/preview.js" type="application/javascript"></script>
     {{/if}}
 
-    {{#if config.head}}
-        {{config.head}}
-    {{/if}}
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0">
     <link rel="stylesheet" href="/root/root.css">
     <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
+    {{{config.head}}}
 </head>
     <body>
         <header class="header">
@@ -89,7 +86,7 @@
             {{{content}}}
         </main>
         {{#if config.endOfBody}}
-            {{config.endOfBody}}
+            {{{config.endOfBody}}}
         {{/if}}
     </body>
 </html>
