feat: add markdown meta support

--- a/src/server/root/root.html
+++ b/src/server/root/root.html
@@ -15,6 +15,7 @@
     <script src="/root/preview.js" type="application/javascript"></script>
     {{/if}}
 
+    {{{metadata}}}
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0">
     <link rel="stylesheet" href="/root/root.css">
     <!--[if IE]>
